# NLP_DHM

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
configs/: bi_mamba_55m.yaml  hybrid_mamba_attention.yaml  transformer_30m.yaml
notebooks/: bi_mamba_zh_vi_colab.ipynb  bi_mamba_zh_vi_colab_infer.ipynb  bi_mamba_zh_vi_report(4)(1).ipynb  bi_mamba_zh_vi_report.ipynb  hybrid_mamba_zh_vi_colab.ipynb  multi_model_zh_vi_demo.ipynb  transformer_zh_vi_colab.ipynb
reports/: system_info.json
reports/hybrid/: eval_results.json  qualitative_samples.json  runtime_avg_last5_draft.json  runtime_avg_last5_ema_draft.json  runtime_best_draft.json  runtime_best_ema_draft.json  runtime_final_draft.json  runtime_summary_draft.json  summary.csv  sweep_decode.csv  sweep_decode_draft.csv
reports/mamba/: dataset_summary.csv  eval_results.json  param_breakdown_hybrid.csv  param_breakdown_mamba.csv  param_breakdown_transformer.csv  per_source_counts.csv  qualitative_samples_draft.json  runtime_final_draft.json  runtime_latest_draft.json  runtime_summary.json  summary_draft.csv  sweep_decode.csv  sweep_decode_draft.csv
reports/multi_model/: efficiency.csv  eval_results.json  qualitative_compare.json  qualitative_vi2zh.csv  qualitative_zh2vi.csv  runtime_summary.json  (+1 more)
scripts/: avg_ckpts.py  evaluate.py  evaluate_hybrid.py  evaluate_transformer.py  prepare_data.py  sweep_decode.py  train.py  train_hybrid.py  train_tokenizer.py  train_transformer.py  translate.py
tests/: test_hybrid.py  test_model.py  test_tokenizer.py  test_transformer.py  test_web_demo.py
(+36 files in other folders)
