[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bi-mamba-mt"
version = "0.1.0"
description = "Bi-Mamba (55M) bidirectional Chinese-Vietnamese machine translation."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "ChauDucToan"}]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "sentencepiece>=0.2.0",
    "datasets>=2.18",
    "einops>=0.7",
    "sacrebleu>=2.4",
]

[project.optional-dependencies]
gpu = ["mamba-ssm>=2.0", "causal-conv1d>=1.2"]

[tool.setuptools.packages.find]
where = ["src"]
